--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -634,6 +634,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2006)'
 
+    - regex: 'MacBookPro1(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 17" (2006)'
+
     - regex: 'MacBookPro4(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro (2008)'
