--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -638,6 +638,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2006)'
 
+    - regex: 'MacBookPro2(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 17" (2007)'
+
     - regex: 'MacBookPro4(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro (2008)'
