--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -642,6 +642,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2007)'
 
+    - regex: 'MacBookPro2(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2007)'
+
     - regex: 'MacBookPro4(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro (2008)'
