Improves detection for MacBook Pro (2008)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6826,3 +6826,21 @@
     model: MacBook Pro 15" (2007)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/5525.26.12 CFNetwork/339.5 Darwin/9.5.0 (i386) (MacBookPro3,1)
+  os:
+    name: Mac
+    version: "10.5"
+    platform: x86
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro (2008)
+  os_family: Mac
+  browser_family: Safari
