--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -1349,7 +1349,7 @@
     brand: Siemens
     model: ME45
   os_family: Unknown
-  browser_family: Unknow
+  browser_family: Unknown
 -
   user_agent: SIE-S40/2.3 UP/4.1.16r
   os: [ ]
