--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17014,7 +17014,7 @@ Zuum:
       model: 'Covet$1'
     - regex: 'MAGNO PLUS'
       model: 'Magno Plus'
-    - regex: 'MAGNO( C)"'
+    - regex: 'MAGNO( C)?'
       model: 'Magno$1'
     - regex: 'ONIX S'
       model: 'Onix S'
