--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -2077,7 +2077,7 @@
   device:
     type: smartphone
     brand: Sharp
-    model: SH-06D
+    model: Aquos Phone SH-06D
   os_family: Android
   browser_family: Android Browser
 - 
