--- a/Tests/fixtures/smartphone-21.yml
+++ b/Tests/fixtures/smartphone-21.yml
@@ -6208,8 +6208,7 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 Linux; Android 5.1; ONIX S405 Build/LMY47D AppleWebKit/537.36 KHTML, like Gecko Chrome/
-  67.0.3396.87 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 Linux; Android 5.1; ONIX S405 Build/LMY47D AppleWebKit/537.36 KHTML, like Gecko Chrome/67.0.3396.87 Mobile Safari/537.36
   os:
     name: Android
     version: "5.1"
