--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -414,7 +414,7 @@ CnM:
 
 # RIM/BlackBerry
 RIM:
-  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBD100-[126]|BB[EF]100-[123456789]|BB[CGH]100-1|8520|8530|9000|9220|9300|9320|9360|9630|9720|9800|9860'
+  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBD100-[126]|BB[EF]100-[123456789]|BB[CGH]100-1|BlackBerry.+(?:8520|8530|9000|9220|9300|9320|9360|9630|9720|9800|9860)'
   device: 'smartphone'
   models:
     - regex: 'BBA100-[12]'
