--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,7 +5,7 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Secure Browser
+# Secure Browser (https://safertechnologies.io/)
 - regex: 'Secure/(?:(\d+[\.\d]+))?'
   name: 'Secure Browser'
   version: '$1'
