--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2991,3 +2991,27 @@
     version: "5385"
     engine: ""
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.16 (KHTML, like Gecko) Chrome/20.0.1207.0 PlayFreeBrowser/2.2.0.0 Safari/537.16
+  client:
+    type: browser
+    name: PlayFree Browser
+    version: 2.2.0.0
+    engine: WebKit
+    engine_version: "537.16"
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) chimlac_browser/1.0 Chrome/64.0.3282.140 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lac
+    version: "1.0"
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.91 chimlac/73.0.3683.91 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lac
+    version: 73.0.3683.91
+    engine: Blink
+    engine_version: ""
