--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -8,6 +8,9 @@
 # CoolBrowser (https://play.google.com/store/apps/details?id=com.easybrowser.browser.coolbrowser)
 - regex: 'Chrome/(\d+[\.\d]+).+AgentWeb.+UCBrowser'
   name: 'CoolBrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
 
 # Flow (https://www.ekioh.com/)
 - regex: 'Flow/(?:(\d+[\.\d]+))'
