Adds detection for ArchiveBox

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2258,6 +2258,14 @@
     name: 'SPECIALNOISE LTD'
     url: 'https://www.specialnoise.com/'
 
+- regex: 'ArchiveBox'
+  name: 'ArchiveBox'
+  url: 'https://archivebox.io/'
+  category: 'Crawler'
+  producer:
+    name: ''
+    url: ''
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
