--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3997,7 +3997,7 @@
       name: SPECIALNOISE LTD
       url: https://www.specialnoise.com/
 -
-  user_agent: ArchiveBox/0.5.3 ( https://github.com/ArchiveBox/ArchiveBox/)
+  user_agent: ArchiveBox/0.5.3 (+https://github.com/ArchiveBox/ArchiveBox/)
   bot:
     name: ArchiveBox
     url: https://archivebox.io/
@@ -4005,4 +4005,12 @@
     producer:
       name: ""
       url: ""
-
+- 
+  user_agent: Choosito/1.0 +http://www.choosito.com/
+  bot:
+    name: Choosito
+    url: https://www.choosito.com/
+    category: Crawler
+    producer:
+      name: Choosito! Inc.
+      url: https://www.choosito.com/
