Adds detection for datagnionbot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4005,7 +4005,7 @@
     producer:
       name: ""
       url: ""
-- 
+-
   user_agent: Choosito/1.0 +http://www.choosito.com/
   bot:
     name: Choosito
@@ -4014,3 +4014,12 @@
     producer:
       name: Choosito! Inc.
       url: https://www.choosito.com/
+-
+  user_agent: datagnionbot (+http://www.datagnion.com/bot.html)
+  bot:
+    name: datagnionbot
+    url: https://www.datagnion.com/bot.html
+    category: Crawler
+    producer:
+      name: DATAGNION GMBH
+      url: https://www.datagnion.com/
