Improves detection for iOS and fix test

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -336,6 +336,10 @@
 ##########
 # iOS
 ##########
+- regex: 'iPad/([89]|1[012]).(\d+[\.\d]*)'
+  name: 'iOS'
+  version: '$1.$2'
+
 - regex: 'Pinterest for iOS/.+; (\d(?:[\d\.]+)?)\)$'
   name: 'iOS'
   version: '$1'
