--- a/Tests/fixtures/tablet.yml
+++ b/Tests/fixtures/tablet.yml
@@ -6785,20 +6785,18 @@
   user_agent: com.google.GoogleMobile/37.1.0 iPad/11.0.3 hw/iPad4_2
   os:
     name: iOS
-    version: ""
+    version: 11.0.3
     platform: ""
   client:
-    type: browser
-    name: Mobile Safari
-    version: ""
-    engine: WebKit
-    engine_version: ""
+    type: mobile app
+    name: Google
+    version: 37.1.0
   device:
     type: tablet
     brand: Apple
     model: iPad Air
   os_family: iOS
-  browser_family: Safari
+  browser_family: Unknown
 - 
   user_agent: Apple-iPad2C7/1002.329
   os:
