Adds detection for iPadOS operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1742,3 +1742,10 @@
     short_name: CAI
     version: ""
     platform: x64
+-
+  user_agent: com.google.GoogleMobile/99.0 iPad/13.4 hw/iPad7_5
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "13.4"
+    platform: ""
