--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -334,6 +334,13 @@
   version: '$1'
 
 ##########
+# iPadOS (https://www.apple.com/ipados/)
+##########
+- regex: 'iPad/(1[34]).(\d+[\.\d]*)'
+  name: 'iPadOS'
+  version: '$1.$2'
+
+##########
 # iOS
 ##########
 - regex: 'Pinterest for iOS/.+; (\d(?:[\d\.]+)?)\)$'
