--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -150,11 +150,7 @@
   name: 'Android'
   version: '$1'
 
-- regex: 'BeyondPod|AntennaPod|Podkicker|DoggCatcher|Player FM|okhttp|Podcatcher Deluxe'
-  name: 'Android'
-  version: ''
-
-- regex: '([24])K_Android_TV_V01|UMC_2KAndroidTV_2019'
+- regex: 'BeyondPod|AntennaPod|Podkicker|DoggCatcher|Player FM|okhttp|Podcatcher Deluxe|.+K_?Android_?TV_'
   name: 'Android'
   version: ''
 
