--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -267,8 +267,8 @@
 - regex: 'Kik/([\d\.]+) \(Android'
   name: 'Kik'
   version: '$1'
--
-  regex: 'Procast/?([\d\.]+)?'
+
+- regex: 'Procast/?([\d\.]+)?'
   name: 'Procast'
   version: '$1'
 
