--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2799,3 +2799,11 @@
     version: "2.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009030821 Firefox/3.0.7 Orca/1.1 build 2
+  client:
+    type: browser
+    name: Orca
+    version: "1.1"
+    engine: Gecko
+    engine_version: 1.9.0.7
