--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,10 +5,12 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Orca (http://www.orcabrowser.com)
-- regex: 'Orca/(\d+[\.\d]+)'
-  name: 'Orca'
+# T-Browser (https://play.google.com/store/apps/details?id=com.tcl.browser)
+- regex: 'Tbrowser/(\d+[\.\d]+)'
+  name: 'T-Browser'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # SFive (https://sfive.vn/)
 - regex: 'SFive(?:_Android)?/.+ Chrome/(\d+[\.\d]+)'
