Adds detection for Orca browser
ref #5702

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,10 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Orca (http://www.orcabrowser.com)
+- regex: 'Orca/(\d+[\.\d]+)'
+  name: 'Orca'
+  version: '$1'
 
 # Flow (https://www.ekioh.com/)
 - regex: 'Flow/(?:(\d+[\.\d]+))'
