--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1749,3 +1749,10 @@
     short_name: IPA
     version: "13.4"
     platform: ""
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 14_2_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.1.1 Mobile/15E148 Safari/604.1
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: 14.2.2
+    platform: ""
