--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -340,6 +340,10 @@
   name: 'iPadOS'
   version: '$1.$2'
 
+- regex: 'iPad.+CPU OS ((1[34])+(?:[_\.]\d+)*)'
+  name: 'iPadOS'
+  version: '$1'
+
 ##########
 # iOS
 ##########
