Adds detection for SPORT1

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -377,3 +377,9 @@
     type: mobile app
     name: Shopee
     version: 2.40.11
+-
+  user_agent: SPORT1/6315 CFNetwork/808.2.16 Darwin/16.3.0
+  client:
+    type: mobile app
+    name: SPORT1
+    version: ""
