--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -373,3 +373,8 @@
 - regex: 'ShopeeVN/([\d\.]+)'
   name: 'Shopee'
   version: '$1'
+
+# SPORT1 (https://apps.apple.com/us/app/sport1/id1185932089)
+- regex: 'SPORT1/([\d\.]+)'
+  name: 'SPORT1'
+  version: ''
