Adds detection for Clovia
ref #6604

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -383,3 +383,9 @@
     type: mobile app
     name: SPORT1
     version: ""
+-
+  user_agent: Clovia/3.3.1 CFNetwork/1206 Darwin/20.1.0
+  client:
+    type: mobile app
+    name: Clovia
+    version: 3.3.1
