--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -369,12 +369,17 @@
   name: 'KakaoTalk'
   version: '$1'
 
-# Shopee (https://apps.apple.com/us/app/shopee-t%E1%BA%BFt-sale-27-01/id959841449)
+# https://apps.apple.com/us/app/shopee-t%E1%BA%BFt-sale-27-01/id959841449
 - regex: 'ShopeeVN/([\d\.]+)'
   name: 'Shopee'
   version: '$1'
 
-# SPORT1 (https://apps.apple.com/us/app/sport1/id1185932089)
+# https://apps.apple.com/us/app/sport1/id1185932089
 - regex: 'SPORT1/([\d\.]+)'
   name: 'SPORT1'
   version: ''
+
+# https://apps.apple.com/us/app/clovia-lingerie-shopping-app/id1243996857
+- regex: 'Clovia/([\d\.]+)'
+  name: 'Clovia'
+  version: '$1'
