Adds detection for ShowMe

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -389,3 +389,9 @@
     type: mobile app
     name: Clovia
     version: 3.3.1
+-
+  user_agent: ShowMe/1.2 CFNetwork/758.5.3 Darwin/15.6.0
+  client:
+    type: mobile app
+    name: ShowMe
+    version: "1.2"
