--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -383,3 +383,8 @@
 - regex: 'Clovia/([\d\.]+)'
   name: 'Clovia'
   version: '$1'
+
+# https://apps.apple.com/us/app/showme-interactive-whiteboard/id445066279
+- regex: 'ShowMe/([\d\.]+)'
+  name: 'ShowMe'
+  version: '$1'
