Adds detection for Wattpad

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -395,3 +395,9 @@
     type: mobile app
     name: ShowMe
     version: "1.2"
+-
+  user_agent: Wattpad/8.42.2.0 CFNetwork/1120 Darwin/19.0.0
+  client:
+    type: mobile app
+    name: Wattpad
+    version: 8.42.2.0
