--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -388,3 +388,8 @@
 - regex: 'ShowMe/([\d\.]+)'
   name: 'ShowMe'
   version: '$1'
+
+# https://apps.apple.com/us/app/wattpad-read-write-stories/id306310789
+- regex: 'Wattpad/([\d\.]+)'
+  name: 'Wattpad'
+  version: '$1'
