Adds detection for The Wall Street Journal

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -401,3 +401,9 @@
     type: mobile app
     name: Wattpad
     version: 8.42.2.0
+-
+  user_agent: WSJ/31581 CFNetwork/1120 Darwin/19.0.0
+  client:
+    type: mobile app
+    name: The Wall Street Journal
+    version: ""
