--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -393,3 +393,8 @@
 - regex: 'Wattpad/([\d\.]+)'
   name: 'Wattpad'
   version: '$1'
+
+# https://apps.apple.com/us/app/the-wall-street-journal/id364387007
+- regex: 'WSJ/([\d\.]+)'
+  name: 'The Wall Street Journal'
+  version: ''
