Adds detection for WH Questions

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -407,3 +407,9 @@
     type: mobile app
     name: The Wall Street Journal
     version: ""
+-
+  user_agent: WH%20Questions/2.2 CFNetwork/887 Darwin/17.0.0
+  client:
+    type: mobile app
+    name: WH Questions
+    version: "2.2"
