--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -398,3 +398,8 @@
 - regex: 'WSJ/([\d\.]+)'
   name: 'The Wall Street Journal'
   version: ''
+
+# https://apps.apple.com/us/app/wh-question-cards-pro-who-what-when-where-why/id544870563
+- regex: 'WH%20Questions/([\d\.]+)'
+  name: 'WH Questions'
+  version: '$1'
