Adds detection for Whisper

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -413,3 +413,9 @@
     type: mobile app
     name: WH Questions
     version: "2.2"
+-
+  user_agent: whisper/201807171247 CFNetwork/901.1 Darwin/17.6.0
+  client:
+    type: mobile app
+    name: Whisper
+    version: ""
