--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -403,3 +403,8 @@
 - regex: 'WH%20Questions/([\d\.]+)'
   name: 'WH Questions'
   version: '$1'
+
+# https://apps.apple.com/us/app/whisper-share-express-meet/id506141837
+- regex: 'whisper/([\d\.]+)'
+  name: 'Whisper'
+  version: ''
