Adds detection for Opal Travel

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -419,3 +419,9 @@
     type: mobile app
     name: Whisper
     version: ""
+-
+  user_agent: Opal/6.54.1.0 CFNetwork/1206 Darwin/20.1.0
+  client:
+    type: mobile app
+    name: Opal Travel
+    version: 6.54.1.0
