--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -408,3 +408,8 @@
 - regex: 'whisper/([\d\.]+)'
   name: 'Whisper'
   version: ''
+
+# https://apps.apple.com/us/app/opal-travel/id941006607
+- regex: 'Opal/([\d\.]+)'
+  name: 'Opal Travel'
+  version: '$1'
