Adds detection for Zalo

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -425,3 +425,9 @@
     type: mobile app
     name: Opal Travel
     version: 6.54.1.0
+-
+  user_agent: Zalo/205.0 CFNetwork/889.9 Darwin/17.2.0
+  client:
+    type: mobile app
+    name: Zalo
+    version: "205.0"
