--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -413,3 +413,8 @@
 - regex: 'Opal/([\d\.]+)'
   name: 'Opal Travel'
   version: '$1'
+
+# https://apps.apple.com/us/app/zalo/id579523206
+- regex: 'Zalo/([\d\.]+)'
+  name: 'Zalo'
+  version: '$1'
