--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -418,3 +418,8 @@
 - regex: 'Zalo/([\d\.]+)'
   name: 'Zalo'
   version: '$1'
+
+# https://apps.apple.com/us/app/%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81/id1050704155
+- regex: 'Yandex/([\d\.]+)'
+  name: 'Yandex'
+  version: ''
