--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -437,3 +437,9 @@
     type: mobile app
     name: Yandex
     version: ""
+- 
+  user_agent: Zoho%20Chat/4.4.9.11 CFNetwork/1121.2.2 Darwin/19.2.0
+  client:
+    type: mobile app
+    name: Zoho Chat
+    version: 4.4.9.11
