Improves detection for iPadOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1756,3 +1756,10 @@
     short_name: IPA
     version: 14.2.2
     platform: ""
+-
+  user_agent: Microsoft Office Word/2.44.1211 (iOS/14.0; Tablet; es-MX; AppStore; Apple/iPad11,6)
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "14.0"
+    platform: ""
