--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -344,6 +344,10 @@
   name: 'iPadOS'
   version: '$1'
 
+- regex: 'iOS/(1[34]).(\d+[\.\d]*).+Apple/iPad'
+  name: 'iPadOS'
+  version: '$1.$2'
+
 ##########
 # iOS
 ##########
