Adds detection for Maelstrom browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3039,3 +3039,11 @@
     version: 16.0.4.120849
     engine: WebKit
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.157 Torrent/44.0.1.3 Safari/537.36
+  client:
+    type: browser
+    name: Maelstrom
+    version: 44.0.1.3
+    engine: Blink
+    engine_version: ""
