--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,12 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Maelstrom (https://www.bittorrent.com/)
+- regex: 'Torrent/(\d+[\.\d]+)'
+  name: 'Maelstrom'
+  version: '$1'
+  engine:
+    default: 'Blink'
 
 # Flow (https://www.ekioh.com/)
 - regex: 'Flow/(?:(\d+[\.\d]+))'
