Adds detection for WhatCMS

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4039,3 +4039,12 @@
   user_agent: Mozilla/5.0 (compatible; meg/0.2; +https://github.com/tomnomnom/meg)
   bot:
     name: Generic Bot
+-
+  user_agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:66.0) WhatCMS/1.0
+  bot:
+    name: WhatCMS
+    url: https://whatcms.org/
+    category: Crawler
+    producer:
+      name: ""
+      url: ""
