--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2282,6 +2282,14 @@
     name: 'DATAGNION GMBH'
     url: 'https://www.datagnion.com/'
 
+- regex: 'WhatCMS'
+  name: 'WhatCMS'
+  url: 'https://whatcms.org/'
+  category: 'Crawler'
+  producer:
+    name: ''
+    url: ''
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
