Adds detection for httpx

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4048,3 +4048,12 @@
     producer:
       name: ""
       url: ""
+-
+  user_agent: httpx - Open-source project (github.com/projectdiscovery/httpx)
+  bot:
+    name: httpx
+    url: https://github.com/projectdiscovery/httpx
+    category: Crawler
+    producer:
+      name: ""
+      url: ""
