Adds detection for PureOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -6,6 +6,13 @@
 ###############
 
 ##########
+# PureOS (https://pureos.net/)
+##########
+- regex: 'PureBrowser'
+  name: 'PureOS'
+  version: ''
+
+##########
 # Caixa Mágica (https://caixamagica.pt/)
 ##########
 - regex: 'CaixaMagica'
