--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1742,3 +1742,10 @@
     short_name: CAI
     version: ""
     platform: x64
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0 PureBrowser/60.1.0
+  os:
+    name: PureOS
+    short_name: PUR
+    version: ""
+    platform: x64
