--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3039,3 +3039,11 @@
     version: 16.0.4.120849
     engine: WebKit
     engine_version: ""
+- 
+  user_agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0 PureBrowser/60.1.0
+  client:
+    type: browser
+    name: PureBrowser
+    version: 60.1.0
+    engine: Gecko
+    engine_version: "60.0"
