--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,10 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# PureBrowser (https://pureos.net/)
+- regex: 'PureBrowser/(\d+[\.\d]+)'
+  name: 'PureBrowser'
+  version: '$1'
 
 # Flow (https://www.ekioh.com/)
 - regex: 'Flow/(?:(\d+[\.\d]+))'
