Improves detection for Microsoft Office apps

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -437,9 +437,15 @@
     type: mobile app
     name: Yandex
     version: ""
-- 
+-
   user_agent: Zoho%20Chat/4.4.9.11 CFNetwork/1121.2.2 Darwin/19.2.0
   client:
     type: mobile app
     name: Zoho Chat
     version: 4.4.9.11
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 10.0; Microsoft PowerPoint 16.0.10730; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.0.10730
