Adds detection for Microsoft Office OneDrive for Business

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -449,3 +449,9 @@
     type: mobile app
     name: Microsoft Office PowerPoint
     version: 16.0.10730
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 10.0; Microsoft OneDrive for Business 16.0.4266; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office OneDrive for Business
+    version: 16.0.4266
