Adds detection for Microsoft Office Publisher

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -455,3 +455,9 @@
     type: mobile app
     name: Microsoft Office OneDrive for Business
     version: 16.0.4266
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 6.1; Microsoft Publisher 16.0.12527; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office Publisher
+    version: 16.0.12527
