Adds detection for Microsoft Office Access

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -461,3 +461,9 @@
     type: mobile app
     name: Microsoft Office Publisher
     version: 16.0.12527
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 10.0; Microsoft Access 16.0.12827; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office Access
+    version: 16.0.12827
