Adds detection for Microsoft Office Visio

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -467,3 +467,9 @@
     type: mobile app
     name: Microsoft Office Access
     version: 16.0.12827
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 10.0; Microsoft Visio 16.0.13231; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office Visio
+    version: 16.0.13231
