--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -317,7 +317,7 @@
   name: '1Password'
   version: '$1'
 
-- regex: '(?:Microsoft Office )?(Access|Excel|OneNote|PowerPoint|Publisher|Word|OneDrive for Business)[ /]([\d\.]+)'
+- regex: '(?:Microsoft Office )?(Access|Excel|OneDrive for Business|OneNote|PowerPoint|Publisher|Visio|Word)[ /]([\d\.]+)'
   name: 'Microsoft Office $1'
   version: '$2'
 
