Adds detection for Microsoft Office Project

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -473,3 +473,9 @@
     type: mobile app
     name: Microsoft Office Visio
     version: 16.0.13231
+-
+  user_agent: Microsoft Office/16.0 (Windows NT 6.1; Microsoft Project 16.0.12527; Pro)
+  client:
+    type: mobile app
+    name: Microsoft Office Project
+    version: 16.0.12527
