--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -8975,3 +8975,19 @@
     model: Honor Pad 2
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Microsoft Office Word/2.45.106 (iOS/14.2; Tablet; es-MX; AppStore; Apple/iPad8,9)
+  os:
+    name: iOS
+    version: "14.2"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.45.106
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Pro 4 11"
+  os_family: iOS
+  browser_family: Unknown
