--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -913,6 +913,9 @@ Apple:
     - regex: '(?:Apple-)?iPad8[C,_][5-8]'
       model: 'iPad Pro 3 12.9'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad8[C,_]9'
+      model: 'iPad Pro 4 11"'
+      device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
       model: 'Apple TV 2'
