--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -907,14 +907,14 @@ Apple:
     - regex: '(?:Apple-)?iPad7[C,_](?:11|12)'
       model: 'iPad 7 10.2'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad8[C,_](?:9|10)'
+      model: 'iPad Pro 4 11"'
+      device: 'tablet'
     - regex: '(?:Apple-)?iPad8[C,_][1-4]'
       model: 'iPad Pro 3 11.0'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad8[C,_][5-8]'
       model: 'iPad Pro 3 12.9'
-      device: 'tablet'
-    - regex: '(?:Apple-)?iPad8[C,_]9'
-      model: 'iPad Pro 4 11"'
       device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
