Adds detection for iPad Pro 4 12.9"

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9007,3 +9007,35 @@
     model: iPad Pro 4 11"
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/2.45.106 (iOS/14.3; Tablet; en-US; AppStore; Apple/iPad8,11)
+  os:
+    name: iOS
+    version: "14.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.45.106
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Pro 4 12.9"
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (iPad; CPU OS 13_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPad8,12;FBMD/iPad;FBSN/iOS;FBSV/13.4;FBSS/2;FBID/tablet;FBLC/en_US;FBOP/5;FBCR/]'
+  os:
+    name: iOS
+    version: "13.4"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Pro 4 12.9"
+  os_family: iOS
+  browser_family: Unknown
