--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -910,6 +910,9 @@ Apple:
     - regex: '(?:Apple-)?iPad8[C,_](?:9|10)'
       model: 'iPad Pro 4 11"'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad8[C,_]1[12]'
+      model: 'iPad Pro 4 12.9"'
+      device: 'tablet'
     - regex: '(?:Apple-)?iPad8[C,_][1-4]'
       model: 'iPad Pro 3 11.0'
       device: 'tablet'
