Adds detection for iPad Mini 5

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9039,3 +9039,35 @@
     model: iPad Pro 4 12.9"
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Mobile/2.45.106 (iOS/14.3; Phone; es-MX; AppStore; Apple/iPad11,1)
+  os:
+    name: iOS
+    version: "14.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Mobile
+    version: 2.45.106
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Mini 5
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/2.42.1008 (iOS/14.0.1; Tablet; es-MX; AppStore; Apple/iPad11,2)
+  os:
+    name: iOS
+    version: 14.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.42.1008
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Mini 5
+  os_family: iOS
+  browser_family: Unknown
