--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -919,6 +919,9 @@ Apple:
     - regex: '(?:Apple-)?iPad8[C,_][5-8]'
       model: 'iPad Pro 3 12.9'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad11[C,_][12]'
+      model: 'iPad Mini 5'
+      device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
       model: 'Apple TV 2'
