Adds detection for iPad Air 3

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9071,3 +9071,35 @@
     model: iPad Mini 5
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/2.44.1211 (iOS/13.7; Tablet; es-MX; AppStore; Apple/iPad11,3)
+  os:
+    name: iOS
+    version: "13.7"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.44.1211
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Air 3
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (iPad; CPU OS 13_3_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPad11,4;FBMD/iPad;FBSN/iOS;FBSV/13.3.1;FBSS/2;FBID/tablet;FBLC/en_US;FBOP/5;FBCR/iPad]'
+  os:
+    name: iOS
+    version: 13.3.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Air 3
+  os_family: iOS
+  browser_family: Unknown
