--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -922,6 +922,9 @@ Apple:
     - regex: '(?:Apple-)?iPad11[C,_][12]'
       model: 'iPad Mini 5'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad11[C,_][34]'
+      model: 'iPad Air 3'
+      device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
       model: 'Apple TV 2'
