Adds detection for iPad 8 10.2"

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9103,3 +9103,35 @@
     model: iPad Air 3
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/2.44.1211 (iOS/14.0; Tablet; es-MX; AppStore; Apple/iPad11,6)
+  os:
+    name: iOS
+    version: "14.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.44.1211
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 8 10.2"
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/2.45.106 (iOS/14.2; Tablet; es-MX; AppStore; Apple/iPad11,7)
+  os:
+    name: iOS
+    version: "14.2"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 2.45.106
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 8 10.2"
+  os_family: iOS
+  browser_family: Unknown
