--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -928,6 +928,9 @@ Apple:
     - regex: '(?:Apple-)?iPad11[C,_][67]'
       model: 'iPad 8 10.2"'
       device: 'tablet'
+    - regex: '(?:Apple-)?iPad13[C,_][12]'
+      model: 'iPad Air 4'
+      device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
       model: 'Apple TV 2'
