--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7158,7 +7158,7 @@ iBerry:
 
 # iHunt
 iHunt:
-  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X'
+  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S20 Ultra ApeX 2021'
   device: 'smartphone'
   models:
     - regex: 'iHunt_Like'
@@ -7189,6 +7189,8 @@ iHunt:
       model: 'Alien X ApeX'
     - regex: 'Alien_X'
       model: 'Alien X'
+    - regex: 'S20 Ultra ApeX 2021'
+      model: 'S20 Ultra ApeX (2021)'
 
 # IconBIT
 IconBIT:
