Adds detection for Siragon SP-5400

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19898,7 +19898,7 @@ Bluewave:
 
 # Siragon (siragon.com)
 Siragon:
-  regex: '(SP-5250)(?:[);/ ]|$)'
+  regex: '(SP-(?:5250|5400))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
