--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -9100,3 +9100,21 @@
     model: 8T
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 11; KB2003) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 88.0.4324.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OnePlus
+    model: 8T
+  os_family: Android
+  browser_family: Chrome
