--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13494,6 +13494,8 @@ STF Mobile:
       model: 'Origins Pro'
     - regex: 'AERIAL PLUS'
       model: 'Aerial Plus'
+    - regex: 'BLOCK 3 mini'
+      model: 'Block 3 Mini'
     - regex: 'BLOCK 3'
       model: 'Block 3'
     - regex: 'BLOCK GO'
