Adds detection for Android Go

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -116,6 +116,13 @@
   version: ''
 
 ##########
+# Android Go (https://www.android.com/versions/go-edition/)
+##########
+- regex: '(?:(?:Orca-)?Android|Adr)[ /](?:[a-z]+ )?(\d+[\.\d]*).+(?:BLOCK 3 mini)'
+  name: 'Android Go'
+  version: '$1'
+
+##########
 # Android
 ##########
 - regex: 'Pinterest for Android/.+; (\d(?:[\d\.]+)?)\)$'
