--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1742,3 +1742,10 @@
     short_name: CAI
     version: ""
     platform: x64
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; BLOCK 3 mini) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36
+  os:
+    name: Android Go
+    short_name: AGO
+    version: 8.1.0
+    platform: ""
