Adds detection for Kalley Element Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7897,9 +7897,11 @@ Just5:
 
 # Kalley (www.kalley.com.co)
 Kalley:
-  regex: 'KALLEY|(?:ELEMENT Q|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
+  regex: 'KALLEY|(?:ELEMENT (?:MAX|Q)|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'ELEMENT MAX'
+      model: 'Element Max'
     - regex: 'ELEMENT Q'
       model: 'Element Q'
     - regex: 'ELEMENT_PRO_2'
