Adds detection for Gol Mobile brand and Gol Mobile F10 Prime

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6048,6 +6048,14 @@ GoMobile:
     - regex: 'GO([0-9]{3,4})'
       model: 'Go$1'
 
+# Gol Mobile
+Gol Mobile:
+  regex: 'F10_PRIME'
+  device: 'smartphone'
+  models:
+    - regex: 'F10_PRIME'
+      model: 'F10 Prime'
+
 # Goly
 Goly:
   regex: 'Goly[ _-]'
