Adds detection for Kempler & Strauss P1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7967,7 +7967,7 @@ Keneksi:
 
 # Kempler & Strauss
 'Kempler & Strauss':
-  regex: 'Alumini_?3_?Plus|Alumini ?[23]|KEMPLER_(TV|X)'
+  regex: 'Alumini_?3_?Plus|Alumini ?[23]|KEMPLER_(P1|TV|X)'
   device: 'smartphone'
   models:
     - regex: 'Alumini ?2'
@@ -7976,6 +7976,8 @@ Keneksi:
       model: 'Alumini 3 Plus'
     - regex: 'Alumini3'
       model: 'Alumini 3'
+    - regex: 'KEMPLER_P1'
+      model: 'P1'
     - regex: 'KEMPLER_TV'
       model: 'TV'
     - regex: 'KEMPLER_X'
