--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14283,7 +14283,7 @@ Softbank:
 
 # Sonim
 Sonim:
-  regex: 'Sonim[ -]|XP[67]700(?:[);/ ]|$)'
+  regex: 'Sonim[ -]|XP(?:[67]7|88)00(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Sonim-XP3400'
@@ -14293,6 +14293,8 @@ Sonim:
       model: 'XP6700'
     - regex: 'XP7700(?:[);/ ]|$)'
       model: 'XP7700'
+    - regex: 'XP8800(?:[);/ ]|$)'
+      model: 'XP8'
 
 # Star
 Star:
