Adds detection for KRONO NET TITAN

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8135,11 +8135,13 @@ Koridy:
 
 # KRONO
 KRONO:
-  regex: 'NET1100'
+  regex: 'NET1100|NET_TITAN'
   device: 'smartphone'
   models:
     - regex: 'NET1100'
       model: 'NET 1100'
+    - regex: 'NET_TITAN'
+      model: 'NET TITAN'
 
 #k-touch
 K-Touch:
