Adds detection for Spark brand and Spark Plus 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19786,6 +19786,13 @@ VAIO:
   device: 'smartphone'
   model: 'Phone A'
 
+# Spark (https://www.spark.co.nz/)
+Spark:
+  regex: 'Spark Plus 3(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Plus 3'
+      model: 'Plus 3'
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
