Improves detection for Android Go

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1749,3 +1749,10 @@
     short_name: AGO
     version: 8.1.0
     platform: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Spark Plus 3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36
+  os:
+    name: Android Go
+    short_name: AGO
+    version: "9"
+    platform: ""
