--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -118,7 +118,7 @@
 ##########
 # Android Go (https://www.android.com/versions/go-edition/)
 ##########
-- regex: '(?:(?:Orca-)?Android|Adr)[ /](?:[a-z]+ )?(\d+[\.\d]*).+(?:BLOCK 3 mini)'
+- regex: '(?:(?:Orca-)?Android|Adr)[ /](?:[a-z]+ )?(\d+[\.\d]*).+(?:BLOCK 3 mini|Spark Plus 3)'
   name: 'Android Go'
   version: '$1'
 
