Adds detection for Cosmote brand and Cosmote My Mini Tab

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4113,6 +4113,15 @@ Clarmin:
   models:
     - regex: 'Clarmin[_ ](B[65]|C1)'
       model: '$1'
+ 
+# Cosmote (https://www.telekom.ro/)
+Cosmote:
+  regex: 'Cosmote'
+  device: 'smartphone'
+  models:
+    - regex: 'Cosmote_My_mini_Tab' # Allview My Mini Tab
+      device: 'tablet'
+      model: 'My Mini Tab'
 
 # Cricket
 Cricket:
