--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -9352,3 +9352,21 @@
     model: Plus 3
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Cosmote_My_mini_Tab 4.0.4; Cosmote_My_mini_Tab Build/IMM76D) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Safari
+    version: "4.0"
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: Cosmote
+    model: My Mini Tab
+  os_family: GNU/Linux
+  browser_family: Safari
