Improves detection for Huawei Y9a

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6898,7 +6898,7 @@ Huawei:
       model: 'Y9 (2019)'
     - regex: 'STK-(L2[12]|LX3)(?:[);/ ]|$)'
       model: 'Y9 Prime (2019)'
-    - regex: 'FRL-L23(?:[);/ ]|$)'
+    - regex: 'FRL-L2[23](?:[);/ ]|$)'
       model: 'Y9a'
 
     - regex: 'HWT31(?:[);/ ]|$)'
