Adds detection for KRONO NET VOLT

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8154,13 +8154,13 @@ Koridy:
 
 # KRONO
 KRONO:
-  regex: 'NET1100|NET_TITAN'
+  regex: 'NET1100|NET_(?:TITAN|VOLT)'
   device: 'smartphone'
   models:
     - regex: 'NET1100'
       model: 'NET 1100'
-    - regex: 'NET_TITAN'
-      model: 'NET TITAN'
+    - regex: 'NET_(TITAN|VOLT)'
+      model: 'NET $1'
 
 #k-touch
 K-Touch:
