Adds detection for MDC Store brand and MDC Store Prime S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19333,6 +19333,13 @@ MAXVI:
       device: 'feature phone'
       model: '$1'
 
+# MDC Store (http://mdc.store/)
+MDC Store:
+  regex: 'Prime_S(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Prime_S(?:[);/ ]|$)'
+      model: 'Prime S'
 
 # meanIT (meanit.hr)
 meanIT:
