Adds detection for Zuum Akus Z

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17286,9 +17286,11 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|(?:COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'Akus Z'
+      model: 'Akus Z'
     - regex: 'COVET_PRO_LITE'
       model: 'Covet Pro Lite'
     - regex: 'COVET PRO'
