Adds detection for CORN brand and CORN R20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4162,6 +4162,14 @@ Clarmin:
     - regex: 'Clarmin[_ ](B[65]|C1)'
       model: '$1'
  
+# CORN
+CORN:
+  regex: 'CORN'
+  device: 'smartphone'
+  models:
+    - regex: 'CORN R20'
+      model: 'R20'
+
 # Cosmote (https://www.telekom.ro/)
 Cosmote:
   regex: 'Cosmote'
