Adds detection for Skype for Business

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -479,3 +479,9 @@
     type: mobile app
     name: Microsoft Office Project
     version: 16.0.12527
+-
+  user_agent: OC/16.0.13231.20390 (Skype for Business)
+  client:
+    type: mobile app
+    name: Skype for Business
+    version: 16.0.13231.20390
