--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -330,6 +330,10 @@
   name: 'Microsoft Office Mobile'
   version: '$1'
 
+- regex: 'OC/([\d\.]+) \(Skype for Business\)'
+  name: 'Skype for Business'
+  version: '$1'
+
 - regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
   name: 'TikTok'
   version: '$1'
