--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4834,9 +4834,9 @@ EKT:
   regex: 'EK-(?:5040|5336|5540|5937|6020|8680|MII|T7020)'
   device: 'tablet'
   models:
-    - regex: 'EK-(5040|5540|5937|6020|8680|MII|T7020)'
+    - regex: 'EK-(MII|T7020)'
       model: 'EK-$1'
-    - regex: 'EK-5336'
+    - regex: 'EK-(5040|5336|5540|5937|6020|8680)'
       device: 'smartphone'
       model: 'EK-5336'
 
