--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4838,7 +4838,7 @@ EKT:
       model: 'EK-$1'
     - regex: 'EK-(5040|5336|5540|5937|6020|8680)'
       device: 'smartphone'
-      model: 'EK-5336'
+      model: 'EK-$1'
 
 # Eks Mobility
 Eks Mobility:
