Improves detection for Android

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1833,3 +1833,10 @@
     short_name: AND
     version: "6.1"
     platform: ARM
+-
+  user_agent: '[FBAN/Orca-Android;FBAV/215.1.0.21.101;FBPN/com.facebook.orca;FBLC/en_GB;FBBV/154685928;FBCR/Banglalink;FBMF/Xiaomi;FBBD/xiaomi;FBDV/Redmi Note 5;FBSV/8.1.0;FBCA/armeabi-v7a:armeabi;FBDM/{density=2.75,width=1080,height=2030};FB_FW/1;]'
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ARM
