--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -142,7 +142,7 @@
   name: 'Android'
   version: '$1'
 
-- regex: 'FB4A.*FBSV/(\d+[\.\d]*);'
+- regex: '(?:Orca-Android|FB4A).*FBSV/(\d+[\.\d]*);'
   name: 'Android'
   version: '$1'
 
