Improves version detection for iOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1840,3 +1840,10 @@
     short_name: AND
     version: 8.1.0
     platform: ARM
+-
+  user_agent: '[FBAN/FBIOS;FBAV/26.0.0.11.13;FBBV/7806348;FBDV/iPhone5,2;FBMD/hone;FBSN/iPhone OS;FBSV/8.1;FBSS/2; FBCR/3DK;FBID/phone;FBLC/da_DK;FBOP/5]'
+  os:
+    name: iOS
+    short_name: IOS
+    version: "8.1"
+    platform: ""
