--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -348,6 +348,10 @@
 ##########
 # iOS
 ##########
+- regex: 'FBIOS.*FBSV/(\d+[\.\d]*);'
+  name: 'iOS'
+  version: '$1'
+
 - regex: 'Pinterest for iOS/.+; (\d(?:[\d\.]+)?)\)$'
   name: 'iOS'
   version: '$1'
