--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -544,7 +544,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: '(?:FBIOS|MessengerLiteForiOS).*FBSV/ ?(\d+[\.\d]*);'
+- regex: '(?:FBIOS|Messenger(?:Lite)?ForiOS).*FBSV/ ?(\d+[\.\d]*);'
   name: 'iOS'
   version: '$1'
 
