Fix and adds detection for Colors Pride 5X

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4162,9 +4162,9 @@ Clarmin:
     - regex: 'Clarmin[_ ](B[65]|C1)'
       model: '$1'
 
-# CORN
+# CORN (corn-mobile.com)
 CORN:
-  regex: 'CORN'
+  regex: 'CORN '
   device: 'smartphone'
   models:
     - regex: 'CORN R20'
@@ -6113,7 +6113,7 @@ GoMobile:
     - regex: 'GO([0-9]{3,4})'
       model: 'Go$1'
 
-# Gol Mobile
+# Gol Mobile (gol-mobile.com)
 Gol Mobile:
   regex: 'F10_PRIME'
   device: 'smartphone'
@@ -20137,13 +20137,15 @@ Smailo:
 
 # Colors or Colors Mobile (www.colors-mobile.com)
 Colors:
-  regex: '(?:Colors[ _](S(?:[19]|11)|P70|P[456]5|P32|E15|P50 Plus)|Pride_1A|P52_Pride5C)(?:[);/ ]|$)'
+  regex: '(?:Colors[ _](S(?:[19]|11)|P70|P[456]5|P32|E15|P50 Plus)|Pride_1A|P52_Pride5C|P90_Pride5X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Pride_1A(?:[);/ ]|$)'
       model: 'Pride 1A'
     - regex: 'P52_Pride5C(?:[);/ ]|$)'
       model: 'Pride 5C'
+    - regex: 'P90_Pride5X(?:[);/ ]|$)'
+      model: 'Pride 5X'
     - regex: 'Colors[ _](S(?:[19]|11)|P70|E15|P[456]5|P32|P50 Plus)(?:[);/ ]|$)'
       model: '$1'
 
